--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
               
                 <ul class="list-unstyled ">
                     <li>
-                        <a style="color: rgb(141,33,101);" routerLink ="/contact">Private Policy</a>
+                        <a style="color: rgb(141,33,101);" routerLink ="/contact">Privacy Policy</a>
                     </li>
                     <li>
                         <a style="color: rgb(141,33,101);" routerLink ="/contact">Contribution Guidelines</a>
@@ -38,13 +38,13 @@
         <a style="margin-right: 20px;" target="_blank" href = " https://twitter.com/systers_org">
             <i class="fa fa-twitter fa-3x" aria-hidden="true" style="color: black"></i>
         </a>
-        <a style="margin-right: 20px;" target="_blank" href = " https://twitter.com/systers_org">
+        <a style="margin-right: 20px;" target="_blank" href = " https://github.com/systers">
             <i class="fa fa-github fa-3x" aria-hidden="true" style="color: black"></i>
         </a>
         <a style="margin-right: 20px;" target="_blank" href = " https://www.facebook.com/AnitaB.0rg/">
             <i class="fa fa-facebook fa-3x" aria-hidden="true" style="color: black"></i>
         </a>
-        <a style="margin-right: 20px;" target="_blank" href = " https://twitter.com/systers_org">
+        <a style="margin-right: 20px;" target="_blank" href = " https://medium.com/@systers_org">
             <i class="fa fa-medium fa-3x" aria-hidden="true" style="color: black"></i>
         </a>
     </div>
